2004-12-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/Component.java,
	libraries/javalib/javax/swing/text/JTextComponent.java:
	Resynced with GNU Classpath.

	2004-11-23  Michael Koch  <konqueror@gmx.de>

        * java/awt/Component.java:
        Fixed argument names to match javadocs.
        (setFont): Rewritten set property first and then fire event.
        (setLocale): Likewise.
        * javax/swing/text/JTextComponent.java
        (setEditable): Likewise.

2004-12-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/util/zip/InflaterInputStream.java:
	Resynced with GNU Classpath.

	2004-11-23  Michael Koch  <konqueror@gmx.de>

        * java/util/zip/InflaterInputStream.java
        (onebytebuffer): Little reformatting to match libgcj's version.
        (read): Likewise.

2004-12-02  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am:
	Removed gnu_java_nio_NIOServerSocket.h.

	* libraries/clib/nio/Makefile.am:
	Removed NIOServerSocket.c.

	* include/Makefile.in,
	libltdl/configure,
	libraries/clib/nio/Makefile.in,
	libraries/clib/awt/classpath-gtk/classpath/Makefile.in:
	Regenerated.

	* libraries/clib/nio/DirectByteBufferImpl.c,
	libraries/clib/nio/NIOServerSocket.c:
	Removed.

	* libraries/javalib/gnu/java/nio/NIOServerSocket.java:
	Resynced with GNU Classpath.

	2004-11-23  Michael Koch  <konqueror@gmx.de>

        * gnu/java/nio/NIOServerSocket.java
        (getPlainSocketImpl): Implemented in java with reflection.
        * include/gnu_java_nio_NIOServerSocket.h,
        native/jni/java-nio/gnu_java_nio_NIOServerSocket.c: Removed.
        * include/Makefile.am:
        Don't generate include/gnu_java_nio_NIOServerSocket.h.
        * native/jni/java-nio/Makefile.am:
        Don't build native/jni/java-nio/gnu_java_nio_NIOServerSocket.c.

2004-12-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/nio/SocketChannelImpl.java:
        Resynced with GNU Classpath.
