@@ -1,5 +1,15 @@
 2004-12-02  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/gnu/java/nio/NIOServerSocket.java:
+        Resynced with GNU Classpath.
+
+	2004-11-23  Michael Koch  <konqueror@gmx.de>
+
+        * gnu/java/nio/NIOServerSocket.java
+        (getPlainSocketImpl): Removed debug code.
+
+2004-12-02  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/awt/Component.java,
 	libraries/javalib/javax/swing/text/JTextComponent.java:
 	Resynced with GNU Classpath.
